# zellij-zextract

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  planning.md  rust-toolchain.toml  spike-report.md  ui-cleanup.md
.github/workflows/: ci.yml  release.yml
crates/spike-a-write-chars/: Cargo.toml
crates/spike-a-write-chars/src/: lib.rs  main.rs
crates/spike-b-ratatui/: Cargo.toml
crates/spike-b-ratatui/src/: main.rs
crates/zextract/: Cargo.toml
crates/zextract/config/: zextract.kdl
crates/zextract/src/: action.rs  extract.rs  fuzzy.rs  main.rs  query.rs  render.rs  source_pane.rs
crates/zextract/src/config/: mod.rs  parse.rs  schema.rs
crates/zextract/src/pattern/: command.rs  diagnostic.rs  file.rs  git.rs  ipv4.rs  ipv6.rs  mod.rs  quoted.rs  secret.rs  sha.rs  url.rs  uuid.rs
crates/zextract/tests/fixtures/: adversarial.txt  commands.txt  custom_patterns.txt  diagnostics.txt  files.txt  git_log.txt  help.txt  installer.txt  multi_group_patterns.txt  realworld.txt  secrets.txt  stress.txt
doc/: config-reference.md  customization.md  multi-pane-grab.md  pane-content-extraction.md  patterns.md  source-pane-race.md  use-cases.md
docs/: config-reference.md  types.md
scripts/: install-hooks.sh  pre-push.sh
tests/fixtures/: urls.txt
