[package]
name = "spike-a-write-chars"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Spike A: verify write_chars_to_pane_id works from plugin to sibling shell pane"
publish = false

[[bin]]
name = "spike_a_write_chars"
path = "src/main.rs"

[dependencies]
zellij-tile.workspace = true
