[package]
name = "spike-b-ratatui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Spike B: verify ratatui widgets + Buffer render correctly inside a Zellij WASI plugin (no crossterm — own the I/O)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile.workspace = true
# ratatui default features pull in crossterm, which has no wasm32-wasip1
# `sys` impl. We skip the backend, use Buffer/Widget directly, and translate
# the Buffer to ANSI ourselves in plugin render().
ratatui = { version = "0.29", default-features = false }
unicode-width = "0.2"
